--- a/prasannas-webpage213870.html
+++ b/prasannas-webpage213870.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prasanna's webpage213870</title>
+    <title>Prasanna's Webpage213870</title>
     <style>
         body {
             background-color: black;
-            color: white; /* Optional: to make text readable on black background */
+            color: white;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -15,6 +15,25 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
+        }
+        #content {
+            display: none;
+            text-align: center;
+        }
+        #controllerIndicator {
+            display: none;
+            color: green;
+            margin-top: 10px;
+        }
+        #excitedIndicator {
+            display: none;
+            color: blue;
+            margin-top: 10px;
+        }
+        #noExcitedIndicator {
+            display: none;
+            color: red;
+            margin-top: 10px;
         }
         button {
             padding: 10px 20px;
@@ -32,28 +51,59 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to prasanna's webpage213870</h1>
-    <button id="teamsButton">Open Teams</button>
+    <div id="content">
+        <h1>Welcome to Prasanna's Webpage213870</h1>
+        <p id="controllerIndicator">You are logged in as Controller</p>
+        <p id="excitedIndicator">Excited is logged in. You cannot open the calculator.</p>
+        <p id="noExcitedIndicator">No Excited user found. Unable to open the calculator.</p>
+        <button id="calculatorButton">Open Calculator</button>
+    </div>
 
     <script>
-        document.getElementById("teamsButton").addEventListener("click", function() {
-            openTeams();
-        });
+        var loggedInUser;
 
-        function openTeams() {
-            // Use a custom URI scheme to open Teams
-            // This URI may vary depending on the platform and the installed application
-            // For Windows:
-            var teamsURI = "msteams://";
-            // For Mac:
-            // var teamsURI = "msteams://";
-            // For iOS:
-            // var teamsURI = "msteams://";
-            // For Android:
-            // var teamsURI = "msteams://";
+        function authenticate() {
+            var username = prompt("Enter your username:");
+            var password = prompt("Enter your password:");
 
-            window.location.href = teamsURI;
+            if (
+                (username === "prasanna_controller" && password === "Pk2!3$70") ||
+                (username === "prasanna_excited" && password === "Pk2!3$70")
+            ) {
+                loggedInUser = username;
+                document.getElementById("content").style.display = "flex";
+                if (username === "prasanna_controller") {
+                    document.getElementById("controllerIndicator").style.display = "block";
+                }
+                if (username === "prasanna_excited") {
+                    document.getElementById("excitedIndicator").style.display = "block";
+                }
+            } else {
+                alert("Invalid credentials. Access denied.");
+            }
         }
+
+        function openCalculator() {
+            if (loggedInUser === "prasanna_controller") {
+                // Send a request to the server to open the calculator on the Excited user's system
+                fetch('/openCalculator')
+                    .then(response => {
+                        if (response.ok) {
+                            alert("Calculator opened successfully on Excited user's system.");
+                        } else {
+                            document.getElementById("noExcitedIndicator").style.display = "block";
+                        }
+                    })
+                    .catch(error => {
+                        console.error('Error opening calculator:', error);
+                    });
+            } else {
+                alert("You are logged in as Excited. You cannot open the calculator.");
+            }
+        }
+
+        authenticate();
+        document.getElementById("calculatorButton").addEventListener("click", openCalculator);
     </script>
 </body>
 </html>
