--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,27 @@
     <title>Form Submission</title>
 </head>
 <body>
-    <form action="/submit-form" method="POST">
+    <form id="submissionForm" action="/submit-form" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
         <input type="submit" value="Submit">
     </form>
+    <div id="response"></div>
+
+    <script>
+        document.getElementById('submissionForm').onsubmit = async function(event) {
+            event.preventDefault();
+
+            const formData = new FormData(this);
+            const response = await fetch('/submit-form', {
+                method: 'POST',
+                body: formData
+            });
+            const text = await response.text();
+            document.getElementById('response').innerText = text;
+        }
+    </script>
 </body>
 </html>
