--- a/index1.html
+++ b/index1.html
@@ -3,29 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Submission</title>
+    <title>LED Control</title>
 </head>
 <body>
-    <form id="submissionForm" action="/submit-form" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        <input type="submit" value="Submit">
-    </form>
-    <div id="response"></div>
+    <h1>Control the LED</h1>
+    <button onclick="runLedScript()">Run Led.py</button>
 
     <script>
-        document.getElementById('submissionForm').onsubmit = async function(event) {
-            event.preventDefault();
-
-            const formData = new FormData(this);
-            const response = await fetch('/submit-form', {
-                method: 'POST',
-                body: formData
-            });
-            const text = await response.text();
-            document.getElementById('response').innerText = text;
+        function runLedScript() {
+            fetch('/run_led_script')
+                .then(response => response.text())
+                .then(data => alert(data))
+                .catch(error => console.error('Error:', error));
         }
     </script>
 </body>
